--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -82,10 +82,17 @@
                                 </tbody>
                             </table>
                         </div>
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-12 col-md-12 d-flex justify-content-center">
+                                <pagination [totalItems]="totalItems" [(ngModel)]="currentPage"
+                                    [itemsPerPage]="pageSize" [maxSize]="maxSize" (pageChanged)="changePage($event)"
+                                    class="pagination-sm">
+                                </pagination>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<!-- <app-user-modal (messageToEmit)="getMessage($event)"></app-user-modal> -->
