componente usuarioCreate inputs

--- a/src/app/components/formsparts/user-create/user-create.component.html
+++ b/src/app/components/formsparts/user-create/user-create.component.html
@@ -10,14 +10,17 @@
           <div class="card-body">
             <form [formGroup]="userFormGroup" (ngSubmit)="onSubmit()">
               <div class="form-row">
+
                 <div class="form-group col-md-6">
-                  <label for="nombres">Nombre*</label>
+                  <label for="nombres">Nombres*</label>
                   <input type="text" name="autor" class="form-control" placeholder="Nombres" formControlName="nombres"
                     [ngClass]="{ 'is-invalid': (submitted && formControls.nombres.errors && formControls.nombres.errors.required) || (formControls.nombres.errors?.required && formControls.nombres.touched && !submitted) }">
                   <div
                     *ngIf="(submitted && formControls.nombres.errors && formControls.nombres.errors.required) || (formControls.nombres.errors?.required && formControls.nombres.touched && !submitted)"
-                    class="validate-error">El campo es requerido</div>
+                    class="validate-error">El campo es requerido
+                  </div>
                 </div>
+
                 <div class="form-group col-md-6">
                   <label for="apellidos">Apellidos*</label>
                   <input type="text" name="autor" class="form-control" placeholder="Apellidos"
@@ -38,6 +41,7 @@
                     *ngIf="(submitted && formControls.userName.errors && formControls.userName.errors.required) || (formControls.userName.errors?.required && formControls.userName.touched && !submitted)"
                     class="validate-error">El campo es requerido</div>
                 </div>
+
                 <div class="form-group col-md-6">
                   <label for="email">email*</label>
                   <input type="email" name="email" class="form-control" placeholder="email@example.com"
@@ -47,25 +51,36 @@
                     *ngIf="(submitted && formControls.email.errors && formControls.email.errors.required) || (formControls.email.errors?.required && formControls.email.touched && !submitted)"
                     class="validate-error">El campo es requerido</div>
                 </div>
+
                 <div class="form-group col-md-6">
                   <label for="password">Password</label>
-                  <input type="password" name="password" class="form-control" placeholder="*****"
+                  <input type="password" name="password" class="form-control" placeholder="*******"
                     formControlName="password">
                 </div>
+
                 <div class="form-group col-md-6">
-                  <label for="password">Telefono*</label>
-                  <input type="text" name="telefono" class="form-control" placeholder="75478976"
-                    formControlName="telefono"
-                    [ngClass]="{ 'is-invalid': (submitted && formControls.telefono.errors && formControls.telefono.errors.required) || (formControls.telefono.errors?.required && formControls.telefono.touched && !submitted) }">
-                  <div
-                    *ngIf="(submitted && formControls.telefono.errors && formControls.telefono.errors.required) || (formControls.telefono.errors?.required && formControls.telefono.touched && !submitted)"
-                    class="validate-error">El campo es requerido</div>
+
+                    <label for="rol">Rol</label>
+                    <select name="rol" class="custom-select" formControlName="rol" id="rol"
+                      [ngClass]="{ 'is-invalid': (submitted && formControls.rol.errors && formControls.rol.errors.required) || (formControls.rol.errors?.required && formControls.rol.touched && !submitted) }">
+                      <option value="0" disabled="true">- Selecionar rol -</option>
+                      <option *ngFor="let rols of roles; let i = index" [value]="rols">
+                        {{rols}}
+                      </option>
+                      <!--<option value="0">Cliente</option> -->
+                    </select>
+                    <div
+                      *ngIf="(submitted && formControls.rol.errors && formControls.rol.errors.required) || (formControls.rol.errors?.required && formControls.rol.touched && !submitted)"
+                      class="validate-error">El campo es requerido
+                    </div>
+
                 </div>
               </div>
+
               <div class="form-row">
                 <div class="col-md-6">
-                  <label for="link_amazon">Imagen</label>
-                  <input type="file" name="portada" class="form-control" placeholder="Portada"
+                  <label for="imagen">Imagen</label>
+                  <input type="file" name="imagen" class="form-control-file"
                     accept=".png, .jpg, .jpeg" #fileInput (change)="fileProgress($event)">
                 </div>
 
@@ -76,30 +91,38 @@
                 </div>
               </div>
               <div class="form-row">
-                <div class="form-group col-md-6">
-                  <label for="rol">Rol</label>
-                  <select name="rol" class="form-control" formControlName="rol" id="rol"
-                    [ngClass]="{ 'is-invalid': (submitted && formControls.rol.errors && formControls.rol.errors.required) || (formControls.rol.errors?.required && formControls.rol.touched && !submitted) }">
-                    <option value="0" disabled="true">- Selecionar rol -</option>
-                    <option *ngFor="let rols of roles; let i = index" [value]="rols">{{rols}}</option>
-                    <!--<option value="0">Cliente</option> -->
-                  </select>
-                  <div
-                    *ngIf="(submitted && formControls.rol.errors && formControls.rol.errors.required) || (formControls.rol.errors?.required && formControls.rol.touched && !submitted)"
-                    class="validate-error">El campo es requerido</div>
-                </div>
-                <div class="form-group col-md-6">
-                  <label for="genero">Genero</label>
-                  <select name="oferta" class="form-control" formControlName="genero"
-                    [ngClass]="{ 'is-invalid': (submitted && formControls.genero.errors && formControls.genero.errors.required) || (formControls.genero.errors?.required && formControls.genero.touched && !submitted) }">
-                    <option value="0" disabled="true">- Selecionar genero -</option>
-                    <option value="FEMENINO">Femenino</option>
-                    <option value="MASCULINO">Masculino</option>
-                  </select>
-                  <div
-                    *ngIf="(submitted && formControls.genero.errors && formControls.genero.errors.required) || (formControls.genero.errors?.required && formControls.genero.touched && !submitted)"
-                    class="validate-error">El campo es requerido</div>
-                </div>
+                  <div class="form-group col-md-6">
+                      <label for="genero">Genero</label>
+                      <select name="oferta" class="custom-select" formControlName="genero"
+                        [ngClass]="{ 'is-invalid': (submitted && formControls.genero.errors && formControls.genero.errors.required) || (formControls.genero.errors?.required && formControls.genero.touched && !submitted) }">
+                        <option value="0" disabled="true">- Selecionar genero -</option>
+                        <option value="FEMENINO">Femenino</option>
+                        <option value="MASCULINO">Masculino</option>
+                      </select>
+                      <div
+                        *ngIf="(submitted && formControls.genero.errors && formControls.genero.errors.required) || (formControls.genero.errors?.required && formControls.genero.touched && !submitted)"
+                        class="validate-error">El campo es requerido</div>
+                  </div>
+                  <div class="form-group col-md-6">
+                      <label for="fechaNacimiento">Fecha Nacimiento*</label>
+                      <input type="date" name="fechaNacimiento" class="form-control"
+                            formControlName="fechaNacimiento"
+                            [ngClass]="{ 'is-invalid': (submitted && formControls.fechaNacimiento.errors && formControls.fechaNacimiento.errors.required) || (formControls.fechaNacimiento.errors?.required && formControls.fechaNacimiento.touched && !submitted) }">
+                      <div
+                        *ngIf="(submitted && formControls.fechaNacimiento.errors && formControls.fechaNacimiento.errors.required) || (formControls.fechaNacimiento.errors?.required && formControls.fechaNacimiento.touched && !submitted)"
+                        class="validate-error">El campo es requerido</div>
+                  </div>
+              </div>
+              <div class="form-row">
+                  <div class="form-group col-md-6">
+                      <label for="password">Telefono*</label>
+                      <input type="text" name="telefono" class="form-control" placeholder="75478976"
+                        formControlName="telefono"
+                        [ngClass]="{ 'is-invalid': (submitted && formControls.telefono.errors && formControls.telefono.errors.required) || (formControls.telefono.errors?.required && formControls.telefono.touched && !submitted) }">
+                      <div
+                        *ngIf="(submitted && formControls.telefono.errors && formControls.telefono.errors.required) || (formControls.telefono.errors?.required && formControls.telefono.touched && !submitted)"
+                        class="validate-error">El campo es requerido</div>
+                  </div>
               </div>
               <button type="submit" class="btn btn-success float-right">Guardar Usario</button>
               <button type="submit" class="btn btn-danger float-right">Cancelar</button>
