--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -85,7 +85,7 @@
                     </div>
                 </div>
             </div>
-            <!--
+       <!-- Perfil Usuario -->
             <div class="col-md-4">
                 <div class="card card-profile">
                     <div class="card-avatar">
@@ -102,7 +102,7 @@
                         <a href="javascript:void(0)" class="btn btn-danger btn-round">Follow</a>
                     </div>
                 </div>
-            </div> -->
+            </div> 
 
         </div>
     </div>
