--- a/src/app/components/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/components/dashboard-admin/dashboard-admin.component.html
@@ -1,5 +1,4 @@
-<p>dashboard-admin works!</p>
-<div class="row">
+<!-- <div class="row">
     <div class="col-lg-8 col-md-10 ml-auto mr-auto">
         <div class="row">
             <div class="col-md-4">
@@ -13,4 +12,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
