--- a/src/app/components/formsparts/user-create/user-create.component.html
+++ b/src/app/components/formsparts/user-create/user-create.component.html
@@ -13,22 +13,38 @@
 
                   <div class="form-group col-md-6">
                     <label for="nombres">Nombres*</label>
-                    <input type="text" name="autor" class="form-control" placeholder="Nombres" formControlName="nombres"
+                    <input type="text" name="nombres" class="form-control" placeholder="Nombres" formControlName="nombres"
                       [ngClass]="{ 'is-invalid': (submitted && formControls.nombres.errors && formControls.nombres.errors.required) || (formControls.nombres.errors?.required && formControls.nombres.touched && !submitted) }">
-                    <div
-                      *ngIf="(submitted && formControls.nombres.errors && formControls.nombres.errors.required) || (formControls.nombres.errors?.required && formControls.nombres.touched && !submitted)"
-                      class="validate-error">El campo es requerido
+                    <div *ngIf="(submitted && formControls.nombres.errors && formControls.nombres.errors.required) && formControls.nombres.dirty || (formControls.nombres.errors?.required && formControls.nombres.touched && !submitted)">
+                      <strong class="validate-error">El campo requerido</strong>
+                    </div>
+                    <div *ngIf="formControls.nombres.errors?.minlength">
+                        <strong class="validate-error" >Minimo 5 caracteres</strong>
+                    </div>
+                    <div *ngIf="formControls.nombres.errors?.maxlength">
+                        <strong class="validate-error" >Maximo 30 caracteres</strong>
+                    </div>
+                    <div *ngIf="formControls.nombres.errors?.pattern && !formControls.nombres.errors?.minlength">
+                        <strong class="validate-error">Caracteres no validos</strong>
                     </div>
                   </div>
-
                   <div class="form-group col-md-6">
                     <label for="apellidos">Apellidos*</label>
                     <input type="text" name="autor" class="form-control" placeholder="Apellidos"
                       formControlName="apellidos"
                       [ngClass]="{ 'is-invalid': (submitted && formControls.apellidos.errors && formControls.apellidos.errors.required) || (formControls.apellidos.errors?.required && formControls.apellidos.touched && !submitted) }">
-                    <div
-                      *ngIf="(submitted && formControls.apellidos.errors && formControls.apellidos.errors.required) || (formControls.apellidos.errors?.required && formControls.apellidos.touched && !submitted)"
-                      class="validate-error">El campo es requerido</div>
+                    <div *ngIf="(submitted && formControls.apellidos.errors && formControls.apellidos.errors.required) || (formControls.apellidos.errors?.required && formControls.apellidos.touched && !submitted)">
+                        <strong class="validate-error">El campo requerido</strong>
+                    </div>
+                    <div *ngIf="formControls.apellidos.errors?.minlength">
+                        <strong class="validate-error" >Minimo 5 caracteres</strong>
+                    </div>
+                    <div *ngIf="formControls.apellidos.errors?.maxlength">
+                        <strong class="validate-error" >Maximo 30 caracteres</strong>
+                    </div>
+                    <div *ngIf="formControls.apellidos.errors?.pattern && !formControls.apellidos.errors?.minlength">
+                        <strong class="validate-error">Caracteres no validos</strong>
+                    </div>
                   </div>
                 </div>
                 <div class="form-row">
@@ -37,29 +53,39 @@
                     <input type="text" name="portada" class="form-control" placeholder="Username"
                       formControlName="userName"
                       [ngClass]="{ 'is-invalid': (submitted && formControls.userName.errors && formControls.userName.errors.required) || (formControls.userName.errors?.required && formControls.userName.touched && !submitted) }">
-                    <div
-                      *ngIf="(submitted && formControls.userName.errors && formControls.userName.errors.required) || (formControls.userName.errors?.required && formControls.userName.touched && !submitted)"
-                      class="validate-error">El campo es requerido</div>
+                    <div *ngIf="(submitted && formControls.userName.errors && formControls.userName.errors.required) || (formControls.userName.errors?.required && formControls.userName.touched && !submitted)">
+                        <strong class="validate-error">El campo requerido</strong>
+                    </div>
+                    <div *ngIf="formControls.userName.errors?.minlength">
+                        <strong class="validate-error" >Minimo 5 caracteres</strong>
+                    </div>
+                    <div *ngIf="formControls.userName.errors?.maxlength">
+                        <strong class="validate-error" >Maximo 30 caracteres</strong>
+                    </div>
+                    <div *ngIf="formControls.userName.errors?.pattern && !formControls.userName.errors?.minlength">
+                        <strong class="validate-error">Caracteres no validos</strong>
+                    </div>
                   </div>
-  
                   <div class="form-group col-md-6">
                     <label for="email">email*</label>
                     <input type="email" name="email" class="form-control" placeholder="email@example.com"
                       formControlName="email"
                       [ngClass]="{ 'is-invalid': (submitted && formControls.email.errors && formControls.email.errors.required) || (formControls.email.errors?.required && formControls.email.touched && !submitted) }">
-                    <div
-                      *ngIf="(submitted && formControls.email.errors && formControls.email.errors.required) || (formControls.email.errors?.required && formControls.email.touched && !submitted)"
-                      class="validate-error">El campo es requerido</div>
+                    <div *ngIf="(submitted && formControls.email.errors && formControls.email.errors.required) || (formControls.email.errors?.required && formControls.email.touched && !submitted)">
+                        <strong class="validate-error">El campo requerido</strong>
+                    </div>
+                    <div *ngIf="formControls.email.errors?.pattern">
+                        <strong class="validate-error">email no valido</strong>
+                    </div>
                   </div>
-  
                   <div class="form-group col-md-6">
                     <label for="password">Password</label>
                     <input type="password" name="password" class="form-control" placeholder="*******"
                       formControlName="password">
                   </div>
-  
+
                   <div class="form-group col-md-6">
-  
+
                       <label for="rol">Rol</label>
                       <select name="rol" class="custom-select" formControlName="rol" id="rol"
                         [ngClass]="{ 'is-invalid': (submitted && formControls.rol.errors && formControls.rol.errors.required) || (formControls.rol.errors?.required && formControls.rol.touched && !submitted) }">
@@ -73,17 +99,17 @@
                         *ngIf="(submitted && formControls.rol.errors && formControls.rol.errors.required) || (formControls.rol.errors?.required && formControls.rol.touched && !submitted)"
                         class="validate-error">El campo es requerido
                       </div>
-  
+
                   </div>
                 </div>
-  
+
                 <div class="form-row">
                   <div class="col-md-6">
                     <label for="imagen">Imagen</label>
                     <input type="file" name="imagen" class="form-control-file"
                       accept=".png, .jpg, .jpeg" #fileInput (change)="fileProgress($event)">
                   </div>
-  
+
                   <div class="col-md-6">
                     <div class="d-flex justify-content-center">
                       <img *ngIf="imageUrl" [src]="imageUrl" alt="" height="80" width="100">
@@ -123,11 +149,15 @@
                           *ngIf="(submitted && formControls.telefono.errors && formControls.telefono.errors.required) || (formControls.telefono.errors?.required && formControls.telefono.touched && !submitted)"
                           class="validate-error">El campo es requerido</div>
                     </div>
+                    <div class="form-group col-md-6">
+
+
+                    </div>
                 </div>
                 <button type="submit" class="btn btn-success float-right">Guardar Usario</button>
                 <button class="btn btn-danger float-right" (click)="cancelar()">Cancelar</button>
               </form>
-  
+
             </div>
           </div>
         </div>
